test/pass/local.rnp
let a = 1;
a = 2;
a += 3;
---
1 sp0
2 sp0
l0 3 + sp0
